applications/management/templates/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "argocd.wieman.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: management-argocd-server
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "argocd.wieman.cloud"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: management-argocd-server
            port:
              number: 80
